<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mo"
    android:layout_height="match_parent"
    tools:context=".Dangky">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_Dangky"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/DK_txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_nameLogin"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/DK_txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_passlogin"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/DK_txtNguoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_tenDK"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/DK_txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_dateDK"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/DK_txtSdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_SdtDK"
                android:inputType="number" />

            <EditText
                android:id="@+id/DK_txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_EmailDK"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_gioitinhDK"
                android:textSize="18dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/DK_rbtBoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbt_boyDK" />

                <RadioButton
                    android:id="@+id/DK_rbtGirl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbt_girlDK" />
            </RadioGroup>

            <Button
                android:id="@+id/DK_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_Dangky"
                android:textSize="20dp" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>