<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/mo"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/txt_infoLogin"
                android:textColor="#ab0a0c"
                android:textSize="27dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_txtName"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nameLogin"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/login_txtPass"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_passlogin"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/login_cbMK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cb_LMK" />

            <Button
                android:id="@+id/login_Bt"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/bt_Login"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/login_txtDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txt_Dangky"
                android:textColor="@color/colorAccent"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/login_txtQMK"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_qmk"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/login_ibtFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <ImageButton
                    android:id="@+id/login_ibtGG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>